Refactor biometria
