# index.mjs
@@ -117,15 +117,15 @@ app.use("/uploads", authStaticMiddleware, express.static("uploads"));
 // Bitácoras
 app.use("/biometrias", bitacoraBiometriaRoutes);
 app.use("/plagas", bitacoraPlagaRoutes);
-app.use("/ceiba/alimentacion", bitacoraAlimentacionRoutes);
-app.use("/ceiba/insumos", bitacoraInsumoRoutes);
+app.use("/alimentacion", bitacoraAlimentacionRoutes);
+app.use("/insumos", bitacoraInsumoRoutes);
 app.use("/recepcion_insumos", recepcionInsumoRoutes);
 app.use("/visitas", bitacoraVisitaRoutes);
 app.use("/banos", bitacoraBanoRoutes);
-app.use("/medellin/parametros", bitacoraParametroRoutes);
-app.use("/medellin/medicamentos", bitacoraMedicamentoRoutes);
-app.use("/medellin/recambios", bitacoraRecambioRoutes);
-app.use("/medellin/inventario", bitacoraInventarioRoutes);
+app.use("/parametros", bitacoraParametroRoutes);
+app.use("/medicamentos", bitacoraMedicamentoRoutes);
+app.use("/recambios", bitacoraRecambioRoutes);
+app.use("/inventario", bitacoraInventarioRoutes);
 
 // rrhh
 app.use("/empleados", empleadoRoutes);
